# Thecode-CLI

./: .env.example  .gitignore  LICENSE  NEXUS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
nexus/: __init__.py  __main__.py  app.py  cli.py  workspace.py
nexus/agent/: agent.py  context.py  loop.py  planner.py  prompts.py  state.py
nexus/config/: loader.py  models.py  settings.py  wizard.py
nexus/llm/: __init__.py  anthropic_provider.py  base.py  failover.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  router.py
nexus/permissions/: __init__.py  manager.py  policies.py  risk.py
nexus/repository/: __init__.py  architecture.py  git.py  ignore.py  index.py  instructions.py  scanner.py
nexus/security/: __init__.py  commands.py  paths.py  secrets.py
nexus/sessions/: __init__.py  database.py  manager.py  models.py  persistence.py
nexus/tools/: __init__.py  base.py  delete_file.py  edit_file.py  execute_command.py  git_diff.py  git_history.py  git_status.py  list_files.py  path_operations.py  processes.py  project_map.py  read_file.py  registry.py  run_tests.py  search_files.py  text_files.py  workspace_tools.py  write_file.py
nexus/ui/: __init__.py  bindings.py  console.py  encoding.py  markdown.py  prompts.py  renderer.py  responsive.py  state.py  thecode.tcss  theme.py  themes.py  tui.py
tests/integration/: test_git.py
tests/unit/: test_agent_loop.py  test_architecture.py  test_branding.py  test_config.py  test_failover.py  test_instructions.py  test_permissions.py  test_processes.py  test_security.py  test_sessions.py  (+6 more)
