[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "thecode-agent"
version = "0.1.1"
description = "A secure, provider-independent coding agent for the terminal"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [{name = "Inacio Sacataria"}]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7",
  "textual>=6.0,<8.0",
  "pydantic>=2.7",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10,<2.0",
  "types-PyYAML>=6.0",
]

[project.scripts]
thecode = "nexus.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["nexus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["E501", "UP046"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
